--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,7 +13,7 @@
     "annotation-no-unknown": null,
     "at-rule-empty-line-before": null,
     "color-function-alias-notation": null,
-    "color-function-notation": "legacy",
+    "color-function-notation": "modern",
     "function-no-unknown": null,
     "media-query-no-invalid": null,
     "no-descending-specificity": null,
