--- a/.stylelintrc
+++ b/.stylelintrc
@@ -31,6 +31,15 @@
     "value-keyword-case": null,
     "scss/at-extend-no-missing-placeholder": null,
     "scss/comment-no-empty": null,
-    "scss/operator-no-unspaced": null
+    "scss/operator-no-unspaced": null,
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "theme",
+          "tailwindcss"
+        ]
+      }
+    ]
   }
 }
