--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,7 +13,7 @@
     "annotation-no-unknown": null,
     "at-rule-empty-line-before": null,
     "color-function-alias-notation": null,
-    "color-function-notation": "modern",
+    "color-function-notation": "legacy",
     "function-no-unknown": null,
     "media-query-no-invalid": null,
     "no-descending-specificity": null,
@@ -31,15 +31,6 @@
     "value-keyword-case": null,
     "scss/at-extend-no-missing-placeholder": null,
     "scss/comment-no-empty": null,
-    "scss/operator-no-unspaced": null,
-    "scss/at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": [
-          "theme",
-          "tailwindcss"
-        ]
-      }
-    ]
+    "scss/operator-no-unspaced": null
   }
 }
